sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/Windrow_Run__c.object-meta.xml
<CustomObject>
    <description>Formerly Windrow Boxes, represents each run on the Biomax machine that is then added to the actual Windrow</description>
    <label>Windrow Run</label>
    <nameField>
        <label>Windrow Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windrow Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>