sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Corn_Cobs_Kg__c.field-meta.xml
<CustomField>
    <fullName>Corn_Cobs_Kg__c</fullName>
    <formula>Total_Waste_and_Feedstock_Kg__c  * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corn Cobs(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>