sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Corn_Cobs_Premix_Kg__c.field-meta.xml
<CustomField>
    <fullName>Corn_Cobs_Premix_Kg__c</fullName>
    <description>Conrn Cobs to Add to Biomax Before Putting Waste (25%)</description>
    <formula>Corn_Cobs_Kg__c * 0.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corn Cobs Premix(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>