sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Dry_Weight_of_Waste_Kg__c.field-meta.xml
<CustomField>
    <fullName>Dry_Weight_of_Waste_Kg__c</fullName>
    <description>Total Dry Matter (25% of Raw Waste)</description>
    <formula>Total_Raw_Waste_Kg__c * 0.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dry Weight of Waste(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>