sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/FLI_Waste__c.field-meta.xml
<CustomField>
    <fullName>FLI_Waste__c</fullName>
    <label>FLI Waste (Kg)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>