sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Lime_to_Add_Kg__c.field-meta.xml
<CustomField>
    <fullName>Lime_to_Add_Kg__c</fullName>
    <description>Total Hydrated Lime to Add (Kg) - Dry Weight * 0.3</description>
    <formula>Dry_Weight_of_Waste_Kg__c * 0.3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lime to Add(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>