sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Non_FLI_Waste_Kg__c.field-meta.xml
<CustomField>
    <fullName>Non_FLI_Waste_Kg__c</fullName>
    <description>Total Non FLI waste Added to the Windrow Run</description>
    <label>Non FLI Waste(Kg)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>