sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Non_FLI_Waste_Source__c.field-meta.xml
<CustomField>
    <fullName>Non_FLI_Waste_Source__c</fullName>
    <description>Source of Non FLI Waste</description>
    <label>Non FLI Waste Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dont Waste - Garden City</fullName>
            </value>
            <value>
                <fullName>EPZ</fullName>
            </value>
            <value>
                <fullName>Mavoko Market</fullName>
            </value>
            <value>
                <fullName>Muthurwa Market</fullName>
            </value>
            <value>
                <fullName>Nairobi Dam</fullName>
            </value>
            <value>
                <fullName>Sanergy Office</fullName>
            </value>
            <value>
                <fullName>Steers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>