sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Total_Raw_Waste_Kg__c.field-meta.xml
<CustomField>
    <fullName>Total_Raw_Waste_Kg__c</fullName>
    <description>Total Raw Waste Added to the Windrow Run</description>
    <formula>FLI_Waste__c +  Non_FLI_Waste_Kg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Raw Waste Added to the Windrow Run</inlineHelpText>
    <label>Total Raw Waste(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>