sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Total_Waste_and_Feedstock_Kg__c.field-meta.xml
<CustomField>
    <fullName>Total_Waste_and_Feedstock_Kg__c</fullName>
    <description>Total Waste and Feedstock(Kg) - Dry Weight * 0.9</description>
    <formula>Total_Raw_Waste_Kg__c / 0.9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Waste and Feedstock(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>