sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Windrow_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Run_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date Windrow Run is Run</description>
    <label>Windrow Run Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>