sfSandBoxCode/force-app/main/default/objects/Windrow_Run__c/fields/Windrow_Run_Number__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Run_Number__c</fullName>
    <description>Auto number for Windrow Run</description>
    <displayFormat>WR-{0000000}</displayFormat>
    <label>Windrow Run Number</label>
    <type>AutoNumber</type>
</CustomField>